--- a/src/styles/FoundFormMap.module.css
+++ b/src/styles/FoundFormMap.module.css
@@ -1,5 +1,5 @@
 .mapSize {
-    display: "flex";
-    width: "90dvw";
-    height: "90dvh";
+    display: flex;
+    width: 90dvw;
+    height: 90dvh;
 }
