--- a/src/styles/Form.module.css
+++ b/src/styles/Form.module.css
@@ -19,23 +19,45 @@
     width: 100%;
     height: 100%;
     object-fit: fill;
+    border-radius: 16px;
+}
+
+.button {
+    border-radius: 5px;
+    border: 2px solid #CFECF0;
+    margin-top: 10px;
+    height: 50px;
+    width: 75px;
+    font-size: 15px;
 }
 
 .mapSize {
     display: flex;
-    width: 60dvw;
+    width: 50%;
     height: 40dvh;
 }
 
+.addressDisplay{
+    width: 50%;
+    border-radius: 16px;
+    border: 2px solid #CFECF0;
+    margin-top: 10px;
+    height: 50px;
+    font-size: 20px;
+}
+
 .contentTextBox {
-    width: 30%; /* 너비 설정 */
+    width: 50%; /* 너비 설정 */
     resize: none;
-    min-height: 50px; /* 최소 높이 */
+    min-height: 180px; /* 최소 높이 */
     max-height: 300px; /* 최대 높이 (선택 사항) */
     overflow-y: hidden; /* 스크롤바 숨기기 */
     font-size: 16px;
-    padding: 8px;
+    padding: 10px;
     box-sizing: border-box;
+    border-radius: 16px;
+    border: 2px solid #CFECF0;
+    margin-top: 10px;
 }
 
 .textboxSize{
@@ -60,7 +82,7 @@
 .formContainer {
     flex: 3;
     padding: 20px;
-    background: #f9f9f9;
+    background: #fff;
     border-radius: 8px;
 }
 
@@ -84,4 +106,68 @@
 
 .postItem:hover {
     background: #f1f1f1;
+}
+
+.formGroup {
+  position: relative;
+  padding: 15px 0 0;
+  margin-top: 10px;
+  width: 50%;
+  align-items: flex-start;
+}
+
+.formField {
+  font-family: inherit;
+  width: 100%;
+  border: 0;
+  border-bottom: 2px solid #CFECF0;
+  outline: 0;
+  font-size: 1.3rem;
+  color: black;
+  padding: 7px 0;
+  background: transparent;
+  transition: border-color 0.2s;
+  margin-top: 5px;
+  margin-bottom: 5px;
+
+  &::placeholder {
+    color: transparent;
+  }
+
+  &:placeholder-shown ~ .formLabel {
+    font-size: 1.3rem;
+    cursor: text;
+    top: 20px;
+  }
+}
+
+.formLabel {
+  position: absolute;
+  top: 0;
+  display: block;
+  transition: 0.2s;
+  font-size: 1rem;
+  color: #A2A0A0;
+  width: 100%; /* 라벨도 입력 필드 크기에 맞춤 */
+  text-align: left; /* 왼쪽 정렬 */
+}
+
+.formField:focus {
+  ~ .formLabel {
+    position: absolute;
+    top: 0;
+    display: block;
+    transition: 0.2s;
+    font-size: 1rem;
+    color: #A2A0A0;
+    font-weight:700;    
+  }
+  padding-bottom: 6px;  
+  font-weight: 700;
+  border-width: 3px;
+  border-image-slice: 1;
+}
+/* reset input */
+.formField{
+  &:required,&:invalid { box-shadow:none; }
 }
