--- a/src/styles/Form.module.css
+++ b/src/styles/Form.module.css
@@ -36,11 +36,6 @@
     display: flex;
     width: 50%;
     height: 40dvh;
-
-    @media screen and (max-width: 450px) {
-      width: 100%;
-      height: 23%;
-    }
 }
 
 .addressDisplay{
@@ -50,10 +45,6 @@
     margin-top: 10px;
     height: 50px;
     font-size: 20px;
-
-    @media screen and (max-width: 450px) {
-      width: 100%;
-    }
 }
 
 .contentTextBox {
@@ -131,6 +122,15 @@
   }
 
   .contentTextBox {
+    width: 100%;
+  }
+
+  .mapSize {
+    height: 23%;
+    width: 100%;
+  }
+
+  .addressDisplay {
     width: 100%;
   }
 }
