--- a/src/styles/Form.module.css
+++ b/src/styles/Form.module.css
@@ -220,6 +220,7 @@
     display: flex;
     justify-content: center; /* 가로 가운데 정렬 */
     align-items: center; /* 세로 가운데 정렬 (필요 시) */
+    padding-bottom: 5px;
   }
 
   .imgDisplay {
