--- a/src/styles/Form.module.css
+++ b/src/styles/Form.module.css
@@ -8,6 +8,7 @@
     height: 200px;
     overflow: hidden;
     position: relative;
+    cursor: pointer;
 }
 
 .imgInput {
@@ -82,7 +83,7 @@
     border-radius: 8px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
     position: relative;
-  }
+}
 
 .formContainer {
     flex: 3;
