style: 사진 업로드 필드 수정

--- a/src/styles/Form.module.css
+++ b/src/styles/Form.module.css
@@ -98,6 +98,11 @@
     cursor: pointer;
 }
 
+.imgUploadField {
+  width: 100%;
+  height: auto;
+}
+
 .sidebar h2 {
   font-size: 18px;
   margin-bottom: 10px;
