--- a/src/styles/Layout.module.css
+++ b/src/styles/Layout.module.css
@@ -1,3 +1,14 @@
+@font-face {
+    font-family: 'Pretendard';
+    src: url('../assets/fonts/PretendardVariable.woff2') format('woff2');
+    font-weight: normal;
+    font-style: normal;
+  }
+
+ * {
+    font-family: 'Pretendard', sans-serif;
+  }
+
 .container {
     display: flex;
     flex-direction: column;
