style: 카드 CSS 수정

--- a/src/styles/Page.module.css
+++ b/src/styles/Page.module.css
@@ -132,3 +132,10 @@
     top: 50%;
     transform: translateY(-50%);
 }
+
+/*카드 CSS*/
+.card{
+    display:flex;
+    align-items: center; 
+    gap: 20px;
+}
