--- a/src/styles/Layout.module.css
+++ b/src/styles/Layout.module.css
@@ -8,6 +8,10 @@
   * {
     font-family: "Pretendard", sans-serif;
   }
+
+  *::-webkit-scrollbar {
+    display: none;
+  }
   
   .container {
     display: flex;
