--- a/src/styles/Page.module.css
+++ b/src/styles/Page.module.css
@@ -134,13 +134,15 @@
 }
 
 /*카드 CSS*/
-.card{
+/*.card{
     display:flex;
     justify-content: flex-start;
     gap: 20px;
-}
+}*/
 
-.content{
-    display:flex;
-    align-items: center;
+.content {
+    display: flex;
+    flex-direction: column; /* 세로 방향으로 정렬 */
+    align-items: flex-start; /* 왼쪽 정렬 (원하는 경우) */
+    gap: 5px; /* 각 span 요소 사이 간격 조절 */
 }
