--- a/src/styles/Page.module.css
+++ b/src/styles/Page.module.css
@@ -142,7 +142,8 @@
 
 .content {
     display: flex;
-    flex-direction: column; /* 세로 방향으로 정렬 */
-    align-items: flex-start; /* 왼쪽 정렬 (원하는 경우) */
-    gap: 5px; /* 각 span 요소 사이 간격 조절 */
+    gap: 20px;
+    justify-content: flex-start;
+    flex-wrap: wrap;
+    flex-direction: column;
 }
