edit: googleloginbutton - 해더 login 버튼에 연결

--- a/src/styles/Layout.module.css
+++ b/src/styles/Layout.module.css
@@ -79,14 +79,14 @@
     margin: 0 200px;
   }
 
-    .news {
-        background: none;
-        border: none;
-        color: black;
-        font-weight: 600;
-        font-size: 16px;
-        cursor: pointer;
-    }
+  .headerButtonDesign {
+      background: none;
+      border: none;
+      color: black;
+      font-weight: 600;
+      font-size: 16px;
+      cursor: pointer;
+  }
 
   .modal {
     position: absolute;
