--- a/src/styles/Page.module.css
+++ b/src/styles/Page.module.css
@@ -132,7 +132,7 @@
     top: 50%;
     transform: translateY(-50%);
 }
-/*전체 카드=>세로 정렬 위해서*/
+/*전체 카드=>가로로 정렬 위해서*/
 .cardList {
     display: flex;
     flex-direction: row;
@@ -141,7 +141,7 @@
 /*개별 요소(부모 요소X)*/
 .cardContainer {
     display: flex;
-    flex-direction: column;
+    flex-direction:row;
     align-items: center;
     background: white;
     border-radius: 12px;
