--- a/src/styles/Page.module.css
+++ b/src/styles/Page.module.css
@@ -143,7 +143,7 @@
 /*개별 요소(부모 요소X)*/
 .cardContainer {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     align-items: center;
     background: white;
     border-radius: 12px;
