--- a/src/styles/Page.module.css
+++ b/src/styles/Page.module.css
@@ -134,14 +134,18 @@
 }
 /*전체 카드=>가로로 정렬 위해서*/
 .cardList {
-    display: flex;
-    justify-content: center;
-    gap: 16px; /* 카드 사이 간격 */
-    justify-content: center; /* 중앙 정렬 */
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-auto-rows: 150px;
+    grid-gap: 40px;
 }
 
 /*개별 요소(부모 요소X)*/
 .cardContainer {
+    display: flex; 
+    justify-content: center;
+    align-items: center;
+    text-align: center;
     background: white;
     border-radius: 12px;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
