--- a/src/styles/Layout.module.css
+++ b/src/styles/Layout.module.css
@@ -75,7 +75,6 @@
   .main {
     flex-grow: 1;
     padding: 20px;
-    overflow-y: auto;
     margin: 0 200px;
   }
 
@@ -167,5 +166,5 @@
     justify-content: space-between;
     display: flex;
     align-items: center;
-    margin: 10px 25px;
+    padding: 0 20px;
   }
