--- a/src/styles/Form.module.css
+++ b/src/styles/Form.module.css
@@ -254,3 +254,52 @@
     margin: auto; /* 가로 중앙 정렬 */
   }
 }
+
+/*전체 카드=>가로로 정렬 위해서*/
+.cardList {
+  display: flex;
+  flex-direction: column;
+  gap: 16px; /* 카드 사이 간격 */
+}
+
+/*개별 요소(부모 요소X)*/
+.cardContainer {
+  background: white;
+  border-radius: 12px;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+  overflow: hidden;
+  width: 200px;  /* 카드의 너비를 적절하게 조절 */
+}
+
+.cardImage {
+  width: 100%;
+  height: 150px; /* 높이를 고정 */
+  object-fit: cover;
+}
+
+.cardContent {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  padding: 12px;
+  width: 100%;
+}
+
+.cardTitle {
+  font-size: 16px;
+  font-weight: bold;
+}
+
+.cardCategory {
+  font-size: 12px;
+  color: gray;
+  border: 1px solid lightgray;
+  padding: 2px 6px;
+  border-radius: 10px;
+}
+
+.cardDate {
+  font-size: 12px;
+  color: darkgray;
+  align-self: flex-end;
+}
