--- a/src/styles/Page.module.css
+++ b/src/styles/Page.module.css
@@ -150,8 +150,8 @@
 }
   
   .cardImage {
-    width: 100%;
-    height: 150px; /* 높이를 고정 */
+    width: 200px;
+    height: 50px; /* 높이를 고정 */
     object-fit: cover;
   }
   
