--- a/src/styles/FormMobile.module.css
+++ b/src/styles/FormMobile.module.css
@@ -64,6 +64,7 @@ html, body {
   margin-top: 10px;
   height: 50px;
   font-size: 15px;
+  background: #F6F7F7;
 }
 
 .contentTextBox {
@@ -78,6 +79,7 @@ html, body {
   border-radius: 16px;
   border: 2px solid #CFECF0;
   margin-top: 10px;
+  background: #F6F7F7;
 }
 
 .contentTextBox:focus {
@@ -87,6 +89,7 @@ html, body {
 
 .textboxSize{
   width: 100%;
+  background: #F6F7F7;
 }
 
 .postList {
@@ -95,7 +98,7 @@ html, body {
 }
 
 .formContainer {
-  background: #fff;
+  background: #F6F7F7;
   border-radius: 19px 19px 0 0;
   display: flex;
   flex-direction: column;
@@ -114,10 +117,6 @@ html, body {
 .imgUploadField {
 width: 95%;
 height: auto;
-}
-
-.postItem:hover {
-  background: #f1f1f1;
 }
 
 .formGroup {
@@ -142,6 +141,7 @@ outline: 0;
 font-size: 16px;
 color: black;
 padding: 7px 0;
+background: #F6F7F7;
 &::placeholder {
   font-size: 14px;
   color: #a2a0a0;
