--- a/src/styles/Page.module.css
+++ b/src/styles/Page.module.css
@@ -135,9 +135,8 @@
 /*전체 카드=>가로로 정렬 위해서*/
 .cardList {
     display: flex;
-    justify-content: center;
+    justify-content: flex-start ;
     gap: 16px; /* 카드 사이 간격 */
-    justify-content: center; /* 중앙 정렬 */
 }
 
 /*개별 요소(부모 요소X)*/
