--- a/src/styles/FormMobile.module.css
+++ b/src/styles/FormMobile.module.css
@@ -8,24 +8,18 @@ html, body {
   display: flex;
   justify-content: center;
   background-color: #7ACAD6;
+  align-items: center;
 
   width: 100%; 
   max-width: 100vw; 
   
   overflow-x: hidden; 
   box-sizing: border-box; 
+
 }
 
-/* .imgContainer {
-  width: 200px;
-  height: 200px;
-  overflow: hidden;
-  position: relative;
-  cursor: pointer;
-} */
-
 .imgContainer {
-  width: 100px;
+  width: 320px;
   height: 100px;
   position: relative; /* ✅ 내부 요소를 고정 위치로 배치 */
   overflow: hidden;
@@ -39,22 +33,16 @@ html, body {
   display: none;
 }
 
-/* .imgDisplay {
+.imgDisplay {
   width: 100%;
   height: 100%;
-  object-fit: contain;
-  border-radius: 10px;
-  padding-top: 7px;
-} */
-
-.imgDisplay {
-  width: 95%;
-  height: auto;
   object-fit: contain;
   position: absolute;
   top: 0;
   left: 0;
-  z-index: 1; /* ✅ 기존 라벨과 겹치도록 */
+  border-radius: 10px;
+  padding-top: 7px;
+  z-index: 1;
 }
 
 .button {
