--- a/src/styles/FormMobile.module.css
+++ b/src/styles/FormMobile.module.css
@@ -134,18 +134,15 @@ html, body {
   height: auto;
 }
 
-
-
 .formGroup {
   position: relative;
   padding: 0 32px;
-  margin: 30px 32px 25px 10px;
+  margin: 30px 25px;
   width: 100%;
 }
 
 .mapContainer {
   position: relative;
-  right: 10px;
   margin-bottom: 10px;
 }
 
