--- a/src/styles/Form.module.css
+++ b/src/styles/Form.module.css
@@ -264,14 +264,12 @@
 
 /*개별 요소(부모 요소X)*/
 .cardContainer {
-  background: white;
-  border-radius: 12px;
-  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-  overflow: hidden;
-  width: 200px;  /* 카드의 너비를 적절하게 조절 */
+  display: flex; 
+  flex-direction: row; 
 }
 
 .cardImage {
+  border-radius: 12px;
   width: 200px;
   height: 50px; /* 높이를 고정 */
   object-fit: cover;
