--- a/src/styles/FormMobile.module.css
+++ b/src/styles/FormMobile.module.css
@@ -21,12 +21,12 @@ html, body {
 .imgContainer {
   width: 320px;
   height: 100px;
-  position: relative; /* ✅ 내부 요소를 고정 위치로 배치 */
+  position: relative;
   overflow: hidden;
   cursor: pointer;
   border: 2px solid #CFECF0;
   border-radius: 10px;
-  background: #F6F7F7; /* ✅ 이미지가 없을 때 배경 유지 */
+  background: #F6F7F7; 
 }
 
 .imgInput {
