--- a/src/styles/Layout.module.css
+++ b/src/styles/Layout.module.css
@@ -74,8 +74,7 @@
   
   .main {
     flex-grow: 1;
-    padding: 20px;
-    margin: 0 200px;
+    /* padding: 20px; */
   }
 
   .headerButtonDesign {
