--- a/src/styles/Mypage.module.css
+++ b/src/styles/Mypage.module.css
@@ -21,19 +21,47 @@
     size: cover;
   }
 
-
-  
-  .writeIcon {
-      position: absolute;
-      right: 37px;
-      bottom: 37px;
-  }
-  
   .contents{
       margin: 170px 200px 0 200px;
       background-color: white;
       border-radius: 30px 30px 0 0;
-      padding: 160px 50px 200px 50px;
+      padding: 0 50px 200px 50px;
+  }
+
+  .mypageTopElements {
+    display: flex; 
+    align-items: center;  /* 세로 중앙 정렬 */
+    position: relative;
+    bottom: 84px;
+    gap: 28px;
+  }
+
+  .userInfo {
+    position: relative;
+    bottom: 34px;
+  }
+
+  .greeting {
+    color: #000;
+    font-family: "Gmarket Sans";
+    font-size: 23px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+  }
+
+  .emailDisplay {
+    color: #143950;
+    font-family: Pretendard;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+  }
+
+  .profileImage{
+    border: 10px solid white; /* 파란색 테두리 */
+    border-radius: 50%; /* 동그랗게 만들기 (선택 사항) */
   }
   
   .bannerWrapper {
