--- a/src/styles/Page.module.css
+++ b/src/styles/Page.module.css
@@ -209,3 +209,34 @@ html, body {
     align-self: flex-start;
   }
   
+.filterContainer {
+    display: flex;
+    gap: 19px; 
+    overflow-x: auto; 
+    white-space: nowrap;
+    padding: 10px 0;
+  }        
+  
+  .filterButton {
+    border: 2px solid transparent;
+    background-color: transparent; 
+    color: black;
+    font-size: 17px;
+    font-weight: 400;
+    padding: 7px 13px;
+    border-radius: 19px; 
+    flex-shrink: 0;
+    cursor: pointer;
+    transition: background 0.3s ease, transform 0.2s;
+  }
+  
+  .filterButton.active {
+    background-color: rgba(122, 202, 214, 0.84);
+    color: black;
+  }
+  
+  .filterButton:hover {
+    transform: scale(1.05); 
+    background: rgba(122, 202, 214, 0.84);
+  }
+  
