--- a/src/styles/Mypage.module.css
+++ b/src/styles/Mypage.module.css
@@ -4,6 +4,33 @@
     font-weight: normal;
     font-style: normal;
   }
+
+  @font-face {
+    font-family: 'Pretendard';
+    src: url('../assets/fonts/PretendardVariable.woff2') format('woff2');
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: "Gmarket sans";
+    src: url("../assets/fonts/GmarketSansTTFBold.ttf") format('truetype');
+    font-weight: 700;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: "Gmarket sans";
+    src: url("../assets/fonts/GmarketSansTTFLight.ttf") format('truetype');
+    font-weight: 300;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: "Gmarket sans";
+    src: url("../assets/fonts/GmarketSansTTFMedium.ttf") format('truetype');
+    font-style: normal;
+}
   
   html, body {
     margin: 0;
