--- a/src/styles/Page.module.css
+++ b/src/styles/Page.module.css
@@ -27,6 +27,8 @@ html, body {
     justify-content: center;
 }
 
+/*모든 배너 이 CSS로*/
+
 .banner {
     width: 100%;
     height: auto; /* 비율 유지 */
@@ -240,3 +242,33 @@ html, body {
     background: rgba(122, 202, 214, 0.84);
   }
   
+
+/*Foundpage 작성 요소 배치 부모요소*/
+.foundContainer{
+  position:relative;
+}
+
+.foundBanner{
+  width: 100%;
+  height: auto; /* 비율 유지 */
+  max-width: 100vw;
+  object-fit: cover; /* 이미지가 찌그러지지 않도록 */
+  display: block;
+  margin: 0 auto;
+}
+/*글 작성 버튼*/
+.foundWrite{
+  position: absolute;
+  top: 10px;  /* FoundBanner의 상단에서 10px 떨어지게 */
+  left: 50%;
+  display: flex;
+  width: 202px;
+  height: 34px;
+  padding: 5px 11px;
+  justify-content: center;
+  align-items: center;
+  gap: 13px;
+  flex-shrink: 0;
+  border-radius: 19px;
+  background: #F6F7F7;
+}
