--- a/src/styles/Mypage.module.css
+++ b/src/styles/Mypage.module.css
@@ -38,22 +38,62 @@
     box-sizing: border-box;
   }
 
-  .background {
+  .backgroundWrapper{
+    position: fixed; 
+    top: 0;
+    left: 0;
     width: 100vw;
-    padding: 0;
-    margin: 0;
+    height: 100vh; 
     z-index: -1;
-    position: absolute;
-    top: 90px;
-    size: cover;
   }
 
+.backcolor {
+  background-color: #F6F7F7;
+}
+
+  .background {
+    width: 100%;
+    height: 100%;
+}
+
   .contents{
-      margin: 170px 200px 0 200px;
       background-color: white;
       border-radius: 30px 30px 0 0;
       padding: 0 50px 200px 50px;
+      width: 100%;
   }
+
+  .myLFContents{
+    padding: 0 50px 200px 50px;
+    width: 100%;
+    position: relative;
+    bottom: 100px;
+}
+
+ .myLFContentsContainer{
+    width: 1040px;
+    margin: 0 auto;
+    padding: 0 44px; 
+    background-color: white;
+    z-index: 5;
+    border-radius: 30px 30px 0 0;
+    display: flex;
+    justify-content: center;
+    position: relative;
+    bottom: 55px;
+ }
+
+  .contentsContainer{
+    width: 1040px;
+    margin: 173px auto 0 auto;
+    padding: 0 44px; 
+    background-color: white;
+    z-index: 5;
+    border-radius: 30px 30px 0 0;
+    display: flex;
+    justify-content: center;
+}
+
 
   .mypageTopElements {
     display: flex; 
@@ -283,4 +323,29 @@
       color: darkgray;
       align-self: flex-start;
     }
+
+    .myfoundtitle {
+      color: #23414D;
+      font-family: "Gmarket Sans";
+      font-size: 30px;
+      font-style: normal;
+      font-weight: 500;
+      line-height: normal;
+      margin-bottom: 100px;
+    }
+
+    .bannerWrapper {
+      width: 100%;
+      display: flex;
+      justify-content: center;
+  }
+  
+  .banner {
+      width: 100%;
+      height: auto; /* 비율 유지 */
+      max-width: 100vw;
+      object-fit: cover; /* 이미지가 찌그러지지 않도록 */
+      display: block;
+      margin: 0 auto;
+  }
     
