--- a/src/styles/Page.module.css
+++ b/src/styles/Page.module.css
@@ -11,6 +11,9 @@ html, body {
   box-sizing: border-box;
 }
 
+.backcolor {
+  background-color: #F6F7F7;
+}
 
 .writeIcon {
     position: absolute;
@@ -19,18 +22,21 @@ html, body {
 }
 
 .contentsContainer{
-    margin: 0 165px 140px 165px;
-    /* width: 1040px; */
+    width: 1040px;
+    margin: 0 auto;
     padding: 0 44px; 
     background-color: white;
     z-index: 5;
     border-radius: 30px 30px 0 0;
     position: relative;
     bottom: 60px;
+    display: flex;
+    justify-content: center;
 }
 
 .contents {
   position: relative;
+  width: 100%;
 }
 
 .bannerWrapper {
