--- a/src/styles/Page.module.css
+++ b/src/styles/Page.module.css
@@ -11,32 +11,14 @@ html, body {
   box-sizing: border-box;
 }
 
-.backcolor {
-  background-color: #F6F7F7;
-}
-
 .writeIcon {
     position: absolute;
     right: 37px;
     bottom: 37px;
 }
 
-.contentsContainer{
-    width: 1040px;
-    margin: 0 auto;
-    padding: 0 44px; 
-    background-color: white;
-    z-index: 5;
-    border-radius: 30px 30px 0 0;
-    position: relative;
-    bottom: 60px;
-    display: flex;
-    justify-content: center;
-}
-
-.contents {
-  position: relative;
-  width: 100%;
+.contents{
+    margin: 0 200px 140px 200px;
 }
 
 .bannerWrapper {
@@ -44,8 +26,6 @@ html, body {
     display: flex;
     justify-content: center;
 }
-
-/*모든 배너 이 CSS로*/
 
 .banner {
     width: 100%;
@@ -228,49 +208,13 @@ html, body {
     color: darkgray;
     align-self: flex-start;
   }
-
-  .dropdown {
-    border-radius: 19px;
-    border: 1px solid #9FD8E0;
-    display: flex;
-    width: 82px;
-    height: 27px;
-    padding: 5px 11px 5px 13px;
-    flex-direction: column;
-    align-items: flex-start;
-    text-align: center;
-    gap: 10px;
-    flex-shrink: 0;
-    color: #000;
-    font-family: Pretendard;
-    font-size: 13px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: normal;
-    cursor: pointer;  
-    justify-content: flex-end;
-  }
-
-  .dropdown:focus {
-    border: 1px solid #9FD8E0;
-    background-color: transparent;
-    color: black;
-    outline: none;
-    /* appearance: none;  */
-  }
-
-  .dropdownWrapper {
-    display: flex;
-    justify-content: flex-end;
-  }
   
 .filterContainer {
     display: flex;
-    gap: 8px; 
+    gap: 19px; 
     overflow-x: auto; 
     white-space: nowrap;
-    position: relative;
-    bottom: 50px;
+    padding: 10px 0;
   }        
   
   .filterButton {
@@ -279,7 +223,7 @@ html, body {
     color: black;
     font-size: 17px;
     font-weight: 400;
-    padding: 5px 10px;
+    padding: 7px 13px;
     border-radius: 19px; 
     flex-shrink: 0;
     cursor: pointer;
@@ -287,42 +231,12 @@ html, body {
   }
   
   .filterButton.active {
-    background-color: white;
+    background-color: rgba(122, 202, 214, 0.84);
     color: black;
   }
   
   .filterButton:hover {
     transform: scale(1.05); 
-    background: white;
+    background: rgba(122, 202, 214, 0.84);
   }
   
-
-/*Foundpage 작성 요소 배치 부모요소*/
-.foundContainer{
-  position:relative;
-}
-
-.foundBanner{
-  width: 100%;
-  height: auto; /* 비율 유지 */
-  max-width: 100vw;
-  object-fit: cover; /* 이미지가 찌그러지지 않도록 */
-  display: block;
-  margin: 0 auto;
-}
-/*글 작성 버튼*/
-.foundWrite{
-  position: absolute;
-  top: 10px;  /* FoundBanner의 상단에서 10px 떨어지게 */
-  left: 50%;
-  display: flex;
-  width: 202px;
-  height: 34px;
-  padding: 5px 11px;
-  justify-content: center;
-  align-items: center;
-  gap: 13px;
-  flex-shrink: 0;
-  border-radius: 19px;
-  background: #F6F7F7;
-}
