--- a/src/styles/Mainpage.module.css
+++ b/src/styles/Mainpage.module.css
@@ -173,12 +173,12 @@
       border-radius: 12px;
       box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
       overflow: hidden;
-      width: 200px;  /* 카드의 너비를 적절하게 조절 */
+      width: 240.349px;  /* 카드의 너비를 적절하게 조절 */
   }
     
     .cardImage {
       width: 100%;
-      height: 150px; /* 높이를 고정 */
+      height: 97.363px;/* 높이를 고정 */
       object-fit: cover;
     }
     
@@ -188,11 +188,20 @@
       align-items: flex-start;
       padding: 12px;
       width: 100%;
+      color: #143950;
+      font-family: Pretendard;
+      font-size: 16px;
+      font-style: normal;
+      font-weight: 500;
+      line-height: normal;
+      text-decoration-line: none;
+      
     }
     
     .cardTitle {
       font-size: 16px;
       font-weight: bold;
+      text-decoration-line: none;
     }
     
     .cardCategory {
@@ -201,6 +210,7 @@
       border: 1px solid lightgray;
       padding: 2px 6px;
       border-radius: 10px;
+      text-decoration-line: none;
     }
     
     .cardDate {
