--- a/src/styles/Mainpage.module.css
+++ b/src/styles/Mainpage.module.css
@@ -165,6 +165,8 @@
       justify-content: flex-start ;
       flex-wrap: wrap;
       gap: 16px; /* 카드 사이 간격 */
+      text-decoration: none;
+      
   }
   
   /*개별 요소(부모 요소X)*/
@@ -194,14 +196,12 @@
       font-style: normal;
       font-weight: 500;
       line-height: normal;
-      text-decoration-line: none;
       
     }
     
     .cardTitle {
       font-size: 16px;
       font-weight: bold;
-      text-decoration-line: none;
     }
     
     .cardCategory {
@@ -210,7 +210,6 @@
       border: 1px solid lightgray;
       padding: 2px 6px;
       border-radius: 10px;
-      text-decoration-line: none;
     }
     
     .cardDate {
