--- a/src/styles/Mainpage.module.css
+++ b/src/styles/Mainpage.module.css
@@ -53,6 +53,7 @@
       font-weight: 600;
       line-height: normal;
       flex-wrap: nowrap;
+      margin-bottom: 20px;
   }
   
   .titleText {
@@ -112,13 +113,13 @@
   /* 글씨 옆 선 */
   .lineLost {
       flex-grow: 1;
-      width: 700px; /* 선의 길이 */
+      width:  100vw;
       height: 4px; /* 선의 두께 */
       background-color: #8ac4d0; /* 선 색상 */
       border-radius: 2px; /* 둥근 끝 */
       position: relative;
-      margin-left: 20px;
-      margin-right: 10px;
+      margin-left: 90px;
+      margin-right: 30px;
       min-width: 150px; /* 최소 너비 설정 */
       max-width: 30vw;
   }
@@ -137,13 +138,13 @@
   
   .lineFound {
       flex-grow: 1;
-      width: 700px; /* 선의 길이 */
+      width: 100vw; /* 선의 길이 */
       height: 4px; /* 선의 두께 */
       background-color: #8ac4d0; /* 선 색상 */
       border-radius: 2px; /* 둥근 끝 */
       position: relative;
-      margin-left: 35px;
-      margin-right: 11px;
+      margin-left: 70px;
+      margin-right: 30px;
       min-width: 150px; /* 최소 너비 설정 */
       max-width: 30vw;
   }
@@ -166,6 +167,7 @@
       flex-wrap: wrap;
       gap: 16px; /* 카드 사이 간격 */
       text-decoration: none;
+      margin-bottom: 127px;
       
   }
   
