--- a/src/styles/Mainpage.module.css
+++ b/src/styles/Mainpage.module.css
@@ -43,7 +43,10 @@
       font-weight: 500;
       line-height: normal;
   }
-  
+  /*중앙정렬 목표*/
+  .Center{
+    margin: 0 auto;
+  }
   .title {
       display: flex;
       align-items: center;
@@ -74,6 +77,7 @@
   .restTitle{
       font-family: 'RiaSans-ExtraBold';
       font-size: 28px;
+      flex-basis: 20%;
   }
   
   .intro {
@@ -94,6 +98,7 @@
       font-weight: 400;
       line-height: normal;
       cursor: pointer;
+      flex-basis: 10%;
   }
   
   .stroke {
@@ -113,7 +118,7 @@
   /* 글씨 옆 선 */
   .lineLost {
       flex-grow: 1;
-      width:  100vw;
+      width: 45.47vw;
       height: 4px; /* 선의 두께 */
       background-color: #8ac4d0; /* 선 색상 */
       border-radius: 2px; /* 둥근 끝 */
@@ -121,7 +126,6 @@
       margin-left: 90px;
       margin-right: 30px;
       min-width: 150px; /* 최소 너비 설정 */
-      max-width: 30vw;
   }
   
   .lineLost::after {
@@ -138,7 +142,7 @@
   
   .lineFound {
       flex-grow: 1;
-      width: 100vw; /* 선의 길이 */
+      width: 45.47vw; /* 선의 길이 */
       height: 4px; /* 선의 두께 */
       background-color: #8ac4d0; /* 선 색상 */
       border-radius: 2px; /* 둥근 끝 */
@@ -146,7 +150,6 @@
       margin-left: 70px;
       margin-right: 30px;
       min-width: 150px; /* 최소 너비 설정 */
-      max-width: 30vw;
   }
   
   .lineFound::after {
