--- a/src/styles/LostSearch.module.css
+++ b/src/styles/LostSearch.module.css
@@ -10,8 +10,7 @@
     display: flex;
     align-items: center;
     width: 400px; /* 원하는 크기로 조절 */
-    border: 2px solid #bce0e7;
-    border-radius: 20px;
+    border-bottom: 2px solid #bce0e7;
     padding: 5px 10px;
     background-color: white;
   }
@@ -29,4 +28,13 @@
     outline: none;
     font-size: 16px;
     padding: 5px;
+  }
+
+  .searchPlaceholder::placeholder{
+    color: #A2A0A0;
+    font-family: Pretendard;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
   }
