style: form 페이지 디자인 및 아이콘 변경 및 폰트 적용

--- a/src/styles/Page.module.css
+++ b/src/styles/Page.module.css
@@ -11,6 +11,10 @@ html, body {
   box-sizing: border-box;
 }
 
+.backcolor{
+  background-color: #F6F7F7;;
+}
+
 .writeIcon {
     position: absolute;
     right: 37px;
