--- a/src/styles/Mainpage.module.css
+++ b/src/styles/Mainpage.module.css
@@ -18,7 +18,11 @@
   }
   
   .contents{
-      margin: 0 200px 140px 200px;
+    width: 80%;
+    max-width: 1200px;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
   }
   
   .bannerWrapper {
@@ -42,10 +46,6 @@
       font-style: normal;
       font-weight: 500;
       line-height: normal;
-  }
-  /*중앙정렬 목표*/
-  .Center{
-    margin: 0 auto;
   }
   .title {
       display: flex;
@@ -111,7 +111,7 @@
       display: flex;
       justify-content: center; 
       gap: 20px; 
-      margin-bottom: 47px;
+      margin-bottom: 37px;
       position: relative;
       bottom: 48px;
   }
@@ -168,7 +168,7 @@
       display: flex;
       justify-content: flex-start ;
       flex-wrap: wrap;
-      gap: 16px; /* 카드 사이 간격 */
+      gap: 26px; /* 카드 사이 간격 */
       text-decoration: none;
       margin-bottom: 127px;
       
@@ -177,9 +177,9 @@
   /*개별 요소(부모 요소X)*/
   .cardContainer {
       background: white;
+      position:relative;
       border-radius: 12px;
       box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-      overflow: hidden;
       width: 240.349px;  /* 카드의 너비를 적절하게 조절 */
   }
     
@@ -193,7 +193,7 @@
       display: flex;
       flex-direction: column;
       align-items: flex-start;
-      padding: 12px;
+      padding: 5px;
       width: 100%;
       color: #143950;
       font-family: Pretendard;
@@ -212,15 +212,22 @@
     .cardCategory {
       font-size: 12px;
       color: gray;
-      border: 1px solid lightgray;
+      border-radius: 19px;
+      border: 1px solid #7ACAD6;
       padding: 2px 6px;
-      border-radius: 10px;
+      display: inline-block;
+      flex-shrink: 0; 
     }
     
     .cardDate {
+      position:absolute;
+      top:85%;
+      left:75%;
       font-size: 12px;
       color: darkgray;
-      align-self: flex-start;
+      align-self: end;
+      display: inline-block;
+      flex-shrink: 0;
     }
     
   .filterContainer {
