--- a/src/styles/Form.module.css
+++ b/src/styles/Form.module.css
@@ -106,6 +106,15 @@
     margin-top: 10px;
 }
 
+.contentTextBox::placeholder {
+  color: rgba(162, 160, 160, 0.65);
+  font-family: Pretendard;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+}
+
 .textboxSize{
     width: 250px
 }
@@ -151,6 +160,15 @@
 .formContentsContainer {
   position: relative;
   bottom: 115px;
+}
+
+.fillElement{
+  position: absolute;
+  top: 0;
+  bottom: 50px; /* 아래쪽에서 50px 띄움 */
+  left: 0;
+  right: 0;
+  background-color: lightblue;
 }
 
 .postItem {
