--- a/src/styles/DetailPage.module.css
+++ b/src/styles/DetailPage.module.css
@@ -1,3 +1,30 @@
 .container {
-    display: flex;
+    /* display: flex; */
 }
+
+.commentInputBox{
+    width: 500px;
+    height: 50px;
+    border: 1px solid black;
+}
+
+.loadingOverlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%; 
+    height: 100%;
+    backdrop-filter: blur(2px); 
+    background: rgba(0, 0, 0, 0.5); 
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 9999; /* Ensure it's above other elements */
+  }
+  
+  .loadingText {
+    font-size: 24px;
+    color: #fff;
+    font-weight: 500;
+    font-family: Pretendard;
+  }
