--- a/src/styles/Form.module.css
+++ b/src/styles/Form.module.css
@@ -68,7 +68,14 @@
   flex-shrink: 0;
   background-color: transparent;
   color: black;
+  transition: background-color 0.3s ease, color 0.3s ease;
 }
+
+.button:hover {
+  color: white;
+  background-color: #143950;
+}
+
 
 .buttonContainer {
   display: flex;
