--- a/src/styles/Mainpage.module.css
+++ b/src/styles/Mainpage.module.css
@@ -166,7 +166,7 @@
   /*전체 카드=>가로로 정렬 위해서*/
   .cardList {
       display: flex;
-      justify-content: flex-start ;
+      justify-content: center ;
       flex-wrap: wrap;
       gap: 26px; /* 카드 사이 간격 */
       text-decoration: none;
