--- a/src/styles/Form.module.css
+++ b/src/styles/Form.module.css
@@ -161,7 +161,7 @@
     width: 800px;
     padding: 41px;
     background: #fff;
-    border-radius: 30px 30px 0 0;
+    border-radius: 30px;
 }
 
 .formContentsContainer {
