--- a/src/styles/Mainpage.module.css
+++ b/src/styles/Mainpage.module.css
@@ -166,11 +166,12 @@
   /*전체 카드=>가로로 정렬 위해서*/
   .cardList {
       display: flex;
-      justify-content: flex-start ;
+      justify-content: center ;
       flex-wrap: wrap;
       gap: 24px;
       text-decoration: none;
       margin: 0 auto 127px auto;
+      width: 100%;
   }
   
   /*개별 요소(부모 요소X)*/
