--- a/src/styles/MainpageMobile.module.css
+++ b/src/styles/MainpageMobile.module.css
@@ -59,7 +59,7 @@
         flex-wrap: nowrap;
         width: 100%;
         justify-content: center;
-        margin: 0 auto 28px auto;
+        margin: 0 auto;
     }
     
     .titleText {
@@ -109,7 +109,7 @@
         display: flex;
         justify-content: center; 
         gap: 10px; 
-        margin-bottom: 37px;
+        margin-bottom: 0px;
         position: relative;
     }
     /* 글씨 옆 선 */
@@ -162,9 +162,9 @@
         display: flex;
         justify-content: center ;
         flex-wrap: wrap;
-        gap: 5px;
+        gap: 6px;
         text-decoration: none;
-        margin: 0 auto 57px auto;
+        margin: 0 auto 10px auto;
         width: 100%;
     }
     
@@ -226,8 +226,6 @@
         position:absolute;
         top:85%;
         left:65%;
-        font-size: 12px;
-        color: darkgray;
         align-self: end;
         display: inline-block;
         flex-shrink: 0;
