--- a/src/styles/MainpageMobile.module.css
+++ b/src/styles/MainpageMobile.module.css
@@ -18,8 +18,7 @@
     }
     
     .contents{
-      width: 80%;
-      max-width: 1200px;
+      width: 1037px;
       margin: 0 auto;
       display: flex;
       flex-direction: column;
@@ -50,7 +49,7 @@
         line-height: normal;
     }
     .title {
-        display: flex;
+        /* display: flex;
         align-items: center;
         color: #193946;
         font-style: normal;
@@ -58,8 +57,16 @@
         line-height: normal;
         flex-wrap: nowrap;
         width: 100%;
-        justify-content: center;
-        margin: 0 auto;
+        justify-content: space-between;
+        margin: 0 auto; */
+
+        display: flex;
+        justify-content: center ;
+        flex-wrap: wrap;
+        gap: 6px;
+        text-decoration: none;
+        margin: 0 auto 10px auto;
+        width: 100%;
     }
     
     .titleText {
