--- a/src/styles/Mypage.module.css
+++ b/src/styles/Mypage.module.css
@@ -326,9 +326,10 @@
     }
     
     .cardDate {
-      position:absolute;
+      position:relative;
       top:85%;
-      left:75%;
+      /* left:65%; */
+      right: 7.5%;
       font-size: 12px;
       color: darkgray;
       align-self: end;
