--- a/src/styles/MainpageMobile.module.css
+++ b/src/styles/MainpageMobile.module.css
@@ -18,7 +18,8 @@
     }
     
     .contents{
-      width: 1037px;
+      width: 80%;
+      max-width: 1200px;
       margin: 0 auto;
       display: flex;
       flex-direction: column;
@@ -49,7 +50,7 @@
         line-height: normal;
     }
     .title {
-        /* display: flex;
+        display: flex;
         align-items: center;
         color: #193946;
         font-style: normal;
@@ -58,11 +59,10 @@
         flex-wrap: nowrap;
         width: 100%;
         justify-content: space-between;
-        margin: 0 auto; */
+        margin: 0 auto;
 
         display: flex;
         justify-content: center ;
-        flex-wrap: wrap;
         gap: 6px;
         text-decoration: none;
         margin: 0 auto 10px auto;
