--- a/src/styles/Page.module.css
+++ b/src/styles/Page.module.css
@@ -219,7 +219,8 @@ html, body {
     display: flex;
     justify-content: flex-start ;
     flex-wrap: wrap;
-    gap: 16px; /* 카드 사이 간격 */
+    gap: 51px; /* 카드 사이 간격 */
+    text-decoration: none;
 }
 
 /*개별 요소(부모 요소X)*/
@@ -228,12 +229,14 @@ html, body {
     border-radius: 12px;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
     overflow: hidden;
-    width: 200px;  /* 카드의 너비를 적절하게 조절 */
+    width: 280px;  /* 카드의 너비를 적절하게 조절 */
+    text-decoration: none;
+    margin: 0 auto;
 }
   
   .cardImage {
     width: 100%;
-    height: 150px; /* 높이를 고정 */
+    height: 168px; /* 높이를 고정 */
     object-fit: cover;
   }
   
