--- a/src/styles/FoundDetail.module.css
+++ b/src/styles/FoundDetail.module.css
@@ -6,5 +6,13 @@
     width: 250px;  /* 카드의 너비를 적절하게 조절 */
     height: 200px;
     object-fit: contain; 
+    position:relative;
+}
+
+.people{
+    position:absolute;
+    top: 40%;
+    left: 40%;
+    font-size: 35px;
 }
 
