style: 블러 처리 시도

--- a/src/styles/Mainpage.module.css
+++ b/src/styles/Mainpage.module.css
@@ -264,3 +264,9 @@
       background: rgba(122, 202, 214, 0.84);
     }
 
+    .blur{
+      backdrop-filter: blur(2px); 
+    }
+.getlogin{
+  display: none;
+}
