--- a/src/styles/Page.module.css
+++ b/src/styles/Page.module.css
@@ -24,10 +24,10 @@ html, body {
 .contentsContainer{
   width: 1040px;
   margin: 0 auto;
-  padding: 0 44px; 
+  padding: 0 44px 120px 44px; 
   background-color: white;
   z-index: 5;
-  border-radius: 30px 30px 0 0;
+  border-radius: 30px;
   position: relative;
   bottom: 60px;
   display: flex;
