--- a/src/styles/Mypage.module.css
+++ b/src/styles/Mypage.module.css
@@ -166,8 +166,8 @@
   }
   
   .titleText {
-      display: flex;
-      align-items: center; 
+    display: flex;
+    align-items: center; 
   }
   
   .mypageSmallTitle {
@@ -178,6 +178,7 @@
     font-weight: 700;
     line-height: normal;
     flex-shrink: 0;
+    margin-bottom: 32px;
   }
   
   .comma {
@@ -285,7 +286,7 @@
       border-radius: 12px;
       box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
       overflow: hidden;
-      width: 240.349px;  /* 카드의 너비를 적절하게 조절 */
+      width: 220px;  /* 카드의 너비를 적절하게 조절 */
   }
     
   .cardImage {
