--- a/src/styles/MainpageMobile.module.css
+++ b/src/styles/MainpageMobile.module.css
@@ -168,8 +168,8 @@
     .cardList {
         display: flex;
         justify-content: center ;
-        flex-wrap: wrap;
-        gap: 6px;
+        flex-wrap: nowrap;
+        gap: 10px;
         text-decoration: none;
         margin: 0 auto 10px auto;
         width: 100%;
@@ -186,7 +186,7 @@
       
       .cardImage {
         width: 100%;
-        height: 51px;/* 높이를 고정 */
+        height: 50px;/* 높이를 고정 */
         object-fit: cover;
         border-radius: 15px 15px 0 0;
       }
