--- a/src/styles/Mainpage.module.css
+++ b/src/styles/Mainpage.module.css
@@ -64,7 +64,8 @@
   .titleText {
       display: flex;
       align-items: center; 
-      margin-left: 40px;
+      margin-left: 30px;
+      flex-wrap: nowrap;
   }
   
   .Lost {
@@ -93,6 +94,8 @@
       font-style: normal;
       font-weight: 700;
       line-height: normal;
+      flex-wrap: nowrap;
+  
   }
   
   .intro {
@@ -291,6 +294,7 @@
       backdrop-filter: blur(12.350000381469727px);
       position:relative;
       padding-left: 50px;
+      flex-wrap: nowrap;
       margin-bottom: 80px;
     }
 
